Make numbers appear on LCD screen when clicked. Add overflow wrap to prevent leaking

--- a/style.css
+++ b/style.css
@@ -36,5 +36,7 @@ h1 {
     font-weight: 800;
     text-align: center;
     padding: 20%;
+    max-width: 100%;
+    overflow-wrap: break-word;
 
 }
